# rust_projects

./: .gitignore  README.md
actix-web-app/: Cargo.toml  cert.pem  key.pem  watch.sh
actix-web-app/src/: main.rs  md5_hash.rs  xgridfs.rs
actix-web-app/src/actix_swagger/: lib.rs
actix-web-app/src/db/: db.rs  mod.rs  user_db.rs
actix-web-app/src/handlers/: file_handler.rs  mod.rs  user_handler.rs
actix-web-app/src/middlewares/: auth_middleware.rs  heartbeat_middleware.rs  logger.rs  logging_middleware.rs  mod.rs
actix-web-app/src/models/: api_response.rs  file_model.rs  mod.rs  token_generator.rs  user.rs  user_model.rs  userid_generator.rs
diesel_demo_postgres/: .env  Cargo.toml
diesel_demo_postgres/migrations/2024-03-02-122653_create_posts/: down.sql  up.sql
diesel_demo_postgres/src/: create_post.rs  delete_post.rs  main.rs  models.rs  postgres_db.rs  publish_post.rs  show_posts.rs
rust_demo/: Cargo.toml  ouput1.txt  output2.txt  output3
rust_demo/resource/: 1.txt
rust_demo/src/: main.rs
rust_demo/src/rust_base/: mod.rs  rust_atomic_test.rs  rust_base_data.rs  rust_base_test.rs  rust_control_condition.rs  rust_file_io.rs  rust_function.rs  rust_genericity.rs  rust_muti_thread.rs  rust_smart_pointer.rs  rust_struct.rs  rust_thread_communication.rs  rust_thread_pool.rs  rust_trait.rs
