[package]
name = "actix-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.196"
cargo-watch = "8.5.2"
actix-multipart = "0.6.1"
futures = "0.3"
swagger-ui =  "0.1"
actix-files = "0.5"
actix-utils = "3.0"
log = "0.4.0"
env_logger = "0.9.0"
chrono = "0.4.19"
tower = "0.4"
futures-util = "0.3.30"


[dev-dependencies]
actix-http = "3.5.0"


